--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     ],
     "scripts": {
         "build": "tsc",
+        "postbuild": "tscpaths -p tsconfig.json -s . -o lib",
         "test": "jest",
         "ci": "yarn --frozen-lockfile"
     },
@@ -19,6 +20,7 @@
         "jest": "^29.1.2",
         "jest-environment-jsdom": "^29.1.2",
         "ts-jest": "^29.0.5",
+        "tscpaths": "^0.0.9",
         "typescript": "^4.8.4"
     },
     "keywords": [
