--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "keywords": [
         "path",
         "data-structures",
-        "tree"
+        "tree",
+        "array",
+        "list"
     ],
     "repository": "https://github.com/Giancarl021/path-like-resolver.git"
 }
